--- a/apps/ethos.xyz/src/app/system.css
+++ b/apps/ethos.xyz/src/app/system.css
@@ -1,1 +1,11 @@
-@import "tailwindcss";
+.light,
+[data-theme="light"],
+:root {
+	--border: oklch(0 0 0);
+}
+
+.dark,
+[data-theme="dark"],
+:root[class~="dark"] {
+	--border: oklch(1 0 0);
+}
