--- a/apps/0xbuidlerhq.xyz/src/app/system.css
+++ b/apps/0xbuidlerhq.xyz/src/app/system.css
@@ -1,6 +1,17 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 
+:root {
+	--app-w: 1080px !important;
+	--app-px: 1rem !important;
+
+	--header-w: 10000px !important;
+	--header-px: 1rem !important;
+
+	--footer-w: 10000px !important;
+	--footer-px: 1rem !important;
+}
+
 .light,
 [data-theme="light"],
 :root {
