--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -183,3 +183,20 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+@theme {
+	/*  sm */
+	--breakpoint-sm: 40rem;
+
+	/* md */
+	--breakpoint-md: 48rem;
+
+	/* lg */
+	--breakpoint-lg: 64rem;
+
+	/* xl */
+	--breakpoint-xl: 80rem;
+
+	/* 2xl */
+	--breakpoint-2xl: 96rem;
+}
